    color to line_color.

  o In fourfold(), modified default colors[3:4] for non-significant log odds ratios
    to be more visually distinct from the fully saturated colors[5:6] for significant ones.

  o In fourfold(), allow the function to work with >3-dimensional tables, by restructuring
    all strata dimensions into a single combined 3rd dimension.
 
Changes in Version 1.2-9

  o Fixed Ord_plot() for devices where the default filling is
    "white" and not "transparent" by explicitly setting it to
    the latter.

  o Bug fix in as.table.structable, returning the table in a different order
    than defined in the structable object, confusing in particular
    plot.structable.

  o add parameter to ternaryplot() to control the positioning of the
    plot labels.

Changes in Version 1.2-8

  o Small bug fixes in handling of some graphical parameters.


Changes in Version 1.2-7

  o Corrected df handling in goodfit() with ML estimation:
    only non-zero cells are used. This is backward compatible
    with versions <= 1.2-4.
    
  o Fixed bug in goodfit() for binomial distribution with
    specified "size" parameter (introduced in 1.2-5).


Changes in Version 1.2-6

  o Small typo in doc of co_table.


Changes in Version 1.2-5

  o Bundesliga data set has been augmented with the results of the
    seasons 2006/7, 2007/8, 2008/9 (thanks to Torsten Hothorn).

  o goodfit() was modified to treat zero cells better: "Internal"
    zero cells (i.e., counts below the maximal observed count that
    did not occur in the sample) are retained (and not dropped as
    before). "Trailing" zero cells (i.e., counts above the maximal
    observed count) are still not considered. The documentation now
    points out the problems with the minimum-chi-squared method in
    the latter situation.

  o sieve() now accepts a gp_tile argument to control the appearance of
    the cells (apart from the sieve color)


Changes in Version 1.2-4
